--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
-  ,
-
-  
+  },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-handlebars": "^8.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
